# tar

./: .clang-format  .clang-tidy  .clang-tidy.in  .gitignore  .gitlab-ci.yml  .gitmodules  .pkg  CMakeLists.txt  README.md  dir.tar  dir.tar.zst
.github/workflows/: linux.yml  windows.yml
cmake/: pkg.cmake
doctest/: CMakeLists.txt
include/tar/: file_reader.h  mmap_reader.h  mmap_reader_msvc.h  mmap_reader_unix.h  tar_reader.h  util.h  zstd_reader.h
include/zstd-untar/: file_reader.h  mmap_reader.h  util.h  zstd-untar.h  zstd_reader.h
test/: file_reader_test.cc  tar_file_test.cc  tar_zst_file.cc  untar_file.cc
